syntax = "proto3";

package proto;

option go_package = "simplewal/pkg/api/wal;protoapi";

message HelloRequest {
  string name = 1;
}

message HelloResponse {
  string message = 1;
}

service WALService {
  rpc SayHello(HelloRequest) returns (HelloResponse);
}
